src/objects/TimeSheet_Labor_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Base_Labor_Rate__c</fullName>
        <label>Base Labor Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labor Booking User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Time Sheet Labor Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error inserting into RootStock</description>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Booking_Hours__c</fullName>
        <label>Labor Booking Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Machine Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Factor__c</fullName>
        <label>Rate Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Up_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Up time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Program__c</fullName>
        <label>Source Program</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Sheet_Entry__c</fullName>
        <label>Time Sheet Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Qty__c</fullName>
        <label>Transaction Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txn_Comments__c</fullName>
        <label>Txn Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>Time Sheet Labor Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Time Sheet Labor Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Sheet Labor Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Work_Order__c</columns>
        <columns>Booking_User__c</columns>
        <columns>Labor_Booking_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LaborEntry-{0000000}</displayFormat>
        <label>TimeSheet Labor Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Labor Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>